Modified project structure to break out business logic
