# handlers/handlers.go
@@ -1,0 +1,14 @@
+package handlers
+
+import (
+	"github.com/Easprey/whiteboard-server/restapi/operations/fingerpaths"
+	"github.com/go-openapi/runtime/middleware"
+)
+
+func GetFingerPaths(params fingerpaths.FingerPathsGetParams) middleware.Responder {
+	return middleware.NotImplemented("operation fingerpaths.FingerPathsGet has not yet been implemented")
+}
+
+func PostFingerPaths(params fingerpaths.FingerPathsPostParams) middleware.Responder {
+	return middleware.NotImplemented("operation fingerpaths.FingerPathsPost has not yet been implemented")
+}
