# restapi/operations/fingerpaths/finger_paths_get_responses.go
@@ -1,0 +1,103 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package fingerpaths
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/Easprey/whiteboard-server/models"
+)
+
+// FingerPathsGetOKCode is the HTTP code returned for type FingerPathsGetOK
+const FingerPathsGetOKCode int = 200
+
+/*FingerPathsGetOK fingerpaths associated with board
+
+swagger:response fingerPathsGetOK
+*/
+type FingerPathsGetOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload []*models.FingerPath `json:"body,omitempty"`
+}
+
+// NewFingerPathsGetOK creates FingerPathsGetOK with default headers values
+func NewFingerPathsGetOK() *FingerPathsGetOK {
+
+	return &FingerPathsGetOK{}
+}
+
+// WithPayload adds the payload to the finger paths get o k response
+func (o *FingerPathsGetOK) WithPayload(payload []*models.FingerPath) *FingerPathsGetOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the finger paths get o k response
+func (o *FingerPathsGetOK) SetPayload(payload []*models.FingerPath) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *FingerPathsGetOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		// return empty array
+		payload = make([]*models.FingerPath, 0, 50)
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+// FingerPathsGetBadRequestCode is the HTTP code returned for type FingerPathsGetBadRequest
+const FingerPathsGetBadRequestCode int = 400
+
+/*FingerPathsGetBadRequest no associated board
+
+swagger:response fingerPathsGetBadRequest
+*/
+type FingerPathsGetBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload interface{} `json:"body,omitempty"`
+}
+
+// NewFingerPathsGetBadRequest creates FingerPathsGetBadRequest with default headers values
+func NewFingerPathsGetBadRequest() *FingerPathsGetBadRequest {
+
+	return &FingerPathsGetBadRequest{}
+}
+
+// WithPayload adds the payload to the finger paths get bad request response
+func (o *FingerPathsGetBadRequest) WithPayload(payload interface{}) *FingerPathsGetBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the finger paths get bad request response
+func (o *FingerPathsGetBadRequest) SetPayload(payload interface{}) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *FingerPathsGetBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
