# restapi/operations/fingerpaths/get_finger_paths_by_board_responses.go
@@ -1,0 +1,103 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package fingerpaths
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/Easprey/whiteboard-server/models"
+)
+
+// GetFingerPathsByBoardOKCode is the HTTP code returned for type GetFingerPathsByBoardOK
+const GetFingerPathsByBoardOKCode int = 200
+
+/*GetFingerPathsByBoardOK fingerpaths associated with board
+
+swagger:response getFingerPathsByBoardOK
+*/
+type GetFingerPathsByBoardOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload []*models.FingerPath `json:"body,omitempty"`
+}
+
+// NewGetFingerPathsByBoardOK creates GetFingerPathsByBoardOK with default headers values
+func NewGetFingerPathsByBoardOK() *GetFingerPathsByBoardOK {
+
+	return &GetFingerPathsByBoardOK{}
+}
+
+// WithPayload adds the payload to the get finger paths by board o k response
+func (o *GetFingerPathsByBoardOK) WithPayload(payload []*models.FingerPath) *GetFingerPathsByBoardOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get finger paths by board o k response
+func (o *GetFingerPathsByBoardOK) SetPayload(payload []*models.FingerPath) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetFingerPathsByBoardOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		// return empty array
+		payload = make([]*models.FingerPath, 0, 50)
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+// GetFingerPathsByBoardBadRequestCode is the HTTP code returned for type GetFingerPathsByBoardBadRequest
+const GetFingerPathsByBoardBadRequestCode int = 400
+
+/*GetFingerPathsByBoardBadRequest no associated board
+
+swagger:response getFingerPathsByBoardBadRequest
+*/
+type GetFingerPathsByBoardBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload interface{} `json:"body,omitempty"`
+}
+
+// NewGetFingerPathsByBoardBadRequest creates GetFingerPathsByBoardBadRequest with default headers values
+func NewGetFingerPathsByBoardBadRequest() *GetFingerPathsByBoardBadRequest {
+
+	return &GetFingerPathsByBoardBadRequest{}
+}
+
+// WithPayload adds the payload to the get finger paths by board bad request response
+func (o *GetFingerPathsByBoardBadRequest) WithPayload(payload interface{}) *GetFingerPathsByBoardBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get finger paths by board bad request response
+func (o *GetFingerPathsByBoardBadRequest) SetPayload(payload interface{}) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetFingerPathsByBoardBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
