# restapi/operations/whiteboard_api.go
@@ -19,7 +19,7 @@ import (
 	strfmt "github.com/go-openapi/strfmt"
 	"github.com/go-openapi/swag"
 
-	"github.com/Easprey/whiteboard-server/restapi/operations/users"
+	"github.com/Easprey/whiteboard-server/restapi/operations/fingerpaths"
 )
 
 // NewWhiteboardAPI creates a new Whiteboard instance
@@ -39,11 +39,11 @@ func NewWhiteboardAPI(spec *loads.Document) *WhiteboardAPI {
 		BearerAuthenticator: security.BearerAuth,
 		JSONConsumer:        runtime.JSONConsumer(),
 		JSONProducer:        runtime.JSONProducer(),
-		UsersGetBoardsBoardNameFingerpathsHandler: users.GetBoardsBoardNameFingerpathsHandlerFunc(func(params users.GetBoardsBoardNameFingerpathsParams) middleware.Responder {
-			return middleware.NotImplemented("operation UsersGetBoardsBoardNameFingerpaths has not yet been implemented")
+		FingerpathsFingerPathsGetHandler: fingerpaths.FingerPathsGetHandlerFunc(func(params fingerpaths.FingerPathsGetParams) middleware.Responder {
+			return middleware.NotImplemented("operation FingerpathsFingerPathsGet has not yet been implemented")
 		}),
-		UsersPostBoardsBoardNameFingerpathsHandler: users.PostBoardsBoardNameFingerpathsHandlerFunc(func(params users.PostBoardsBoardNameFingerpathsParams) middleware.Responder {
-			return middleware.NotImplemented("operation UsersPostBoardsBoardNameFingerpaths has not yet been implemented")
+		FingerpathsFingerPathsPostHandler: fingerpaths.FingerPathsPostHandlerFunc(func(params fingerpaths.FingerPathsPostParams) middleware.Responder {
+			return middleware.NotImplemented("operation FingerpathsFingerPathsPost has not yet been implemented")
 		}),
 	}
 }
@@ -76,10 +76,10 @@ type WhiteboardAPI struct {
 	// JSONProducer registers a producer for a "application/json" mime type
 	JSONProducer runtime.Producer
 
-	// UsersGetBoardsBoardNameFingerpathsHandler sets the operation handler for the get boards board name fingerpaths operation
-	UsersGetBoardsBoardNameFingerpathsHandler users.GetBoardsBoardNameFingerpathsHandler
-	// UsersPostBoardsBoardNameFingerpathsHandler sets the operation handler for the post boards board name fingerpaths operation
-	UsersPostBoardsBoardNameFingerpathsHandler users.PostBoardsBoardNameFingerpathsHandler
+	// FingerpathsFingerPathsGetHandler sets the operation handler for the finger paths get operation
+	FingerpathsFingerPathsGetHandler fingerpaths.FingerPathsGetHandler
+	// FingerpathsFingerPathsPostHandler sets the operation handler for the finger paths post operation
+	FingerpathsFingerPathsPostHandler fingerpaths.FingerPathsPostHandler
 
 	// ServeError is called when an error is received, there is a default handler
 	// but you can set your own with this
@@ -143,12 +143,12 @@ func (o *WhiteboardAPI) Validate() error {
 		unregistered = append(unregistered, "JSONProducer")
 	}
 
-	if o.UsersGetBoardsBoardNameFingerpathsHandler == nil {
-		unregistered = append(unregistered, "users.GetBoardsBoardNameFingerpathsHandler")
+	if o.FingerpathsFingerPathsGetHandler == nil {
+		unregistered = append(unregistered, "fingerpaths.FingerPathsGetHandler")
 	}
 
-	if o.UsersPostBoardsBoardNameFingerpathsHandler == nil {
-		unregistered = append(unregistered, "users.PostBoardsBoardNameFingerpathsHandler")
+	if o.FingerpathsFingerPathsPostHandler == nil {
+		unregistered = append(unregistered, "fingerpaths.FingerPathsPostHandler")
 	}
 
 	if len(unregistered) > 0 {
@@ -252,12 +252,12 @@ func (o *WhiteboardAPI) initHandlerCache() {
 	if o.handlers["GET"] == nil {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
-	o.handlers["GET"]["/boards/{boardName}/fingerpaths"] = users.NewGetBoardsBoardNameFingerpaths(o.context, o.UsersGetBoardsBoardNameFingerpathsHandler)
+	o.handlers["GET"]["/boards/{boardName}/fingerpaths"] = fingerpaths.NewFingerPathsGet(o.context, o.FingerpathsFingerPathsGetHandler)
 
 	if o.handlers["POST"] == nil {
 		o.handlers["POST"] = make(map[string]http.Handler)
 	}
-	o.handlers["POST"]["/boards/{boardName}/fingerpaths"] = users.NewPostBoardsBoardNameFingerpaths(o.context, o.UsersPostBoardsBoardNameFingerpathsHandler)
+	o.handlers["POST"]["/boards/{boardName}/fingerpaths"] = fingerpaths.NewFingerPathsPost(o.context, o.FingerpathsFingerPathsPostHandler)
 
 }
 
